tests/dbg_cases/errors/test_void_return/test.csm
i32 func_void() {
    return 0;
}

i32 main() {
    func_void();
    return 0;
}
